# image-classifier

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/assign3_partb/: ExampleInstrumentedTest.kt
app/src/main/cpp/: CMakeLists.txt  assign3.cpp
app/src/main/java/com/example/assign3_partb/: MainActivity.kt  native-lib.cpp
app/src/main/java/com/example/assign3_partb/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: button_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/assign3_partb/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
openCV/: build.gradle
